makebook/asymptotics/exercises/0-31415n4-1000n3/traceback.txt
Traceback (most recent call last):
  File "/usr/lib64/python3.7/site-packages/latextool_basic.py", line 4383, in add
    d['pin_y'] = eval(expr) # depends on expr
  File "<string>", line 1
    abs(0.31415*n**4 + 1000*n**3
                               ^
SyntaxError: unexpected EOF while parsing
